# auca-platformer-project

./: .gitignore  CMakeLists.txt  LICENSE  assets.h  vcpkg.json
data/images/: air.aseprite
data/images/collectables/: knowledge_book.aseprite
data/images/dialogue/: next_indicator.aseprite  panel.aseprite
data/images/levels/: level_0_0_0.aseprite
data/images/player/: player.aseprite
data/images/ui/: right_key.aseprite  space_key.aseprite
data/images/wall/: wall.aseprite
data/shaders/: air.frag  crt.frag
src/: assets.cpp  assets.h  global_state.cpp  global_state.h  globals.h  graphics_old.h  input.cpp  input.h  level.h  old_assets.h  platformer.cpp  player.cpp  player.h  utilities.cpp  utilities.h
src/characters/: player.cpp  player.h
src/gameobjects/: knowledge_book.cpp  knowledge_book.h  player.cpp  player.h
src/graphics/: animation.cpp  animation.h  menu.cpp  menu.h  metrics.cpp  metrics.h  scene.cpp  scene.h  text.cpp  text.h
src/graphics/scenes/: dialogue.cpp  dialogue.h  level_scene.cpp  level_scene.h  menu.cpp  menu.h
src/level/: level.cpp  level.h
src/level/tiles/: air.cpp  air.h  wall.cpp  wall.h
